driver incorrectly handles the setting of frame rates

PR:	36415
Submitted by:	brandt@fokus.gmd.de

Former-commit-id: 754b6cb47ffb93a60255586edc43895a7e9343d1